docs: 添加新的使用文档

--- a/templates/index.html
+++ b/templates/index.html
@@ -108,7 +108,7 @@
                     margin-top: 24px;">
                         <div slot="headline">账号管理</div>
                         <div slot="text">
-                            <p>使用方法：<a href="https://gamernotitle.sg.larksuite.com/wiki/PLLywJxlViN31tkBiIflSaytgBg">https://gamernotitle.sg.larksuite.com/wiki/PLLywJxlViN31tkBiIflSaytgBg</a></p>
+                            <p>使用方法：<a href="https://gamernotitle.sg.larksuite.com/wiki/PLLywJxlViN31tkBiIflSaytgBg">https://gamernotitle.sg.larksuite.com/wiki/PLLywJxlViN31tkBiIflSaytgBg</a> 或 <a href="https://scriptkid.notion.site/welearnbrainburst">https://scriptkid.notion.site/welearnbrainburst</a></p>
                             <s-text-field style="display: grid; width: auto; margin-bottom: 24px; margin-top: 24px;"
                                 label="Cookie" name="cookie-input" id="cookie-input"></s-text-field>
                             <div align="right">
